# Carnet

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/carnet/: Cargo.toml
apps/carnet/src/: clipboard.rs  config.rs  history.rs  lib.rs  main.rs  sandbox.rs
apps/carnet/src/ui/: mod.rs  preview.rs  renderer.rs
crates/term_uikit/: Cargo.toml
crates/term_uikit/src/: event.rs  image_format.rs  image_proc.rs  layout.rs  lib.rs  style.rs  terminal.rs  widgets.rs
examples/: examples.txt
